feat/store 테스트수정까지완료 테스트는미진행